committing some deleted files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .Rproj.user
 .Rhistory
 .RData
+BAD-Fig_SiZer_plot_lake_ice_thickness__ice_thickness__ELB.pdf
+BAD-Fig_SiZer_plot_lake_ppr__PPR__ELB.pdf
